--- a/com.sdcard.monitor.plist
+++ b/com.sdcard.monitor.plist
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
     <key>Label</key>
@@ -6,7 +7,7 @@
 
     <key>ProgramArguments</key>
     <array>
-        <string>/usr/local/bin/sdcard_monitor.sh</string>
+        <string>/path/to/your/script.sh</string>
     </array>
 
     <key>RunAtLoad</key>
@@ -14,5 +15,11 @@
 
     <key>KeepAlive</key>
     <true/>
+
+    <key>StandardOutPath</key>
+    <string>/tmp/sdcard_monitor.log</string>
+
+    <key>StandardErrorPath</key>
+    <string>/tmp/sdcard_monitor_error.log</string>
 </dict>
 </plist>
